# cocoa

./: .gitattributes  .gitignore  README.md  pyproject.toml
config/: main.yaml
config/collation/: clif-21.yaml
config/tokenization/: clif-21.yaml
config/winnowing/: clif-21.yaml
recipes/: transfer.md
src/cocoa/: cli.py  collator.py  configurable.py  logger.py  reporter.py  tokenizer.py  util.py  vocabulary.py  winnower.py
src/cocoa/config/: collation.yaml  tokenization.yaml  winnowing.yaml
tests/: test_collator.py  test_tokenizer.py  test_vocabulary.py
