[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "numpy>=2.4.2",
        "omegaconf>=2.3.0",
        "polars>=1.39.0",
        "rich>=14.3.3",
        "typer>=0.24.1",
    ]
    name = "cocoa"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.12"
    version = "26.1.0"

    [project.scripts]
        cocoa = "cocoa.cli:main"

[dependency-groups]
    dev = [ "pip>=26.0.1", "pytest>=9.0.2", "ruff>=0.15.4" ]


[tool.ruff]
    line-length = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party = [ "cocoa" ]

[tool.setuptools.packages.find]
    where = [ "src" ]

[build-system]
    build-backend = "setuptools.build_meta"
    requires      = [ "setuptools>=82.0", "wheel", "ninja" ]

[tool.uv]
    exclude-newer = "2026-04-04T00:00:00Z"
    no-cache      = true
