[project]
    classifiers = [
        "Development Status :: 2 - Pre-Alpha",
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3",
    ]
    dependencies = [
        "numpy>=2.4.2",
        "omegaconf>=2.3.0",
        "polars>=1.39.0",
        "rich>=14.3.3",
        "typer>=0.24.1",
    ]
    description = "configurable collator and tokenizer"
    keywords = [ "data collation", "generative event models", "tokenization" ]
    license = "MIT"
    license-files = [ "LICEN[CS]E.*" ]
    name = "cocoa"
    readme = { file = "README.md", content-type = "text/markdown" }
    requires-python = ">=3.12"
    version = "26.2.0"

    [project.scripts]
        cocoa = "cocoa.cli:main"

    [project.urls]
        Repository = "https://github.com/bbj-lab/cocoa"

[dependency-groups]
    dev = [ "pip>=26.0.1", "ruff>=0.15.4" ]


[tool.ruff]
    extend-exclude = [ "*.md" ]
    line-length    = 88

    [tool.ruff.format]
        docstring-code-format     = true
        indent-style              = "space"
        line-ending               = "lf"
        quote-style               = "double"
        skip-magic-trailing-comma = true

    [tool.ruff.lint]
        ignore = [ "E731" ]
        select = [ "E", "F", "I" ]

        [tool.ruff.lint.isort]
            known-first-party = [ "cocoa" ]

[build-system]
    build-backend = "uv_build"
    requires      = [ "uv_build>=0.10.6,<1.0.0" ]

[tool.uv]
    exclude-newer = "2026-04-04T00:00:00Z"
    no-cache      = true
